==> jameswalmsley/bitthunder/arch/arm/mach/lpc17xx/qei.c <==
#include <bitthunder.h>
#include "qei.h"
#include "rcc.h"

static void ResetQEI(BT_HANDLE hQEI)
{
	volatile LPC17xx_QEI_REGS *pRegs = hQEI->pRegs;

	pRegs->QEICON = LPC17xx_QEI_QEICON_RESP | LPC17xx_QEI_QEICON_RESV | LPC17xx_QEI_QEICON_RESI;
	pRegs->QEIIEC = 0x1FFF;
}

static BT_s32 qei_get_velocity(BT_HANDLE hQEI, BT_ERROR *pError) {
	volatile LPC17xx_QEI_REGS *pRegs = hQEI->pRegs;

	if (pError)
		*pError= BT_ERR_NONE;

	BT_u32 ulInputClk = BT_LPC17xx_GetPeripheralClock(g_QEI_PERIPHERAL[hQEI->id]);

	BT_s32 slVelocity = pRegs->QEICAP * (ulInputClk / pRegs->QEILOAD);

	if (!(pRegs->QEICONF & LPC17xx_QEI_QEICONF_DIRINV))	{
		if (pRegs->QEISTAT & LPC17xx_QEI_QEISTAT_DIR)
			slVelocity = -slVelocity;
	}
	else {
		if (!(pRegs->QEISTAT & LPC17xx_QEI_QEISTAT_DIR))
			slVelocity = -slVelocity;
	}

	return slVelocity;
}

static BT_ERROR qei_setconfig(BT_HANDLE hQEI, BT_QEI_CONFIG *pConfig) {
	volatile LPC17xx_QEI_REGS *pRegs = hQEI->pRegs;

	pRegs->QEICONF = 0x00;

	if (pConfig->eDirection 	== BT_QEI_DIRECTION_NEG)
		pRegs->QEICONF |= LPC17xx_QEI_QEICONF_DIRINV;
	if (pConfig->eSignalMode 	== BT_QEI_SIGNAL_DIR_CLK)
		pRegs->QEICONF |= LPC17xx_QEI_QEICONF_SIGMODE;
	if (pConfig->eCaptureMode 	== BT_QEI_CAPTURE_4_EDGES)
		pRegs->QEICONF |= LPC17xx_QEI_QEICONF_CAPMODE;

	BT_u32 ulInputClk = BT_LPC17xx_GetPeripheralClock(g_QEI_PERIPHERAL[hQEI->id]);

	pRegs->QEILOAD = ulInputClk / pConfig->ulVelocityUpdateRate;

	pRegs->FILTER = 5;

	hQEI->bUseIndexToResetPosition = pConfig->bUseIndexToResetPosition;

	if (pConfig->bUseIndexToResetPosition)
	{
		pRegs->QEICON = LPC17xx_QEI_QEICON_RESPI;
	}

	return BT_ERR_NONE;
}

static BT_ERROR qei_enable_interrupt(BT_HANDLE hQEI, BT_u32 ulType) {
	volatile LPC17xx_QEI_REGS *pRegs = hQEI->pRegs;

	pRegs->QEIIES = ulType;

	return BT_ERR_NONE;
}

static BT_ERROR qei_disable_interrupt(BT_HANDLE hQEI, BT_u32 ulType) {
	volatile LPC17xx_QEI_REGS *pRegs = hQEI->pRegs;

	pRegs->QEIIEC = ulType;

	return BT_ERR_NONE;
}

static BT_ERROR qei_clear_interrupt(BT_HANDLE hQEI, BT_u32 ulType) {
	volatile LPC17xx_QEI_REGS *pRegs = hQEI->pRegs;

	pRegs->QEICLR = ulType;

	return BT_ERR_NONE;
}

static void enableQEIPeripheralClock(BT_HANDLE hQEI) {
	const BT_RESOURCE *pResource = BT_GetIntegratedResource(hQEI->pDevice, BT_RESOURCE_ENUM, 0);

	switch(pResource->ulStart) {
	case 0: {
		LPC17xx_RCC->PCONP |= LPC17xx_RCC_PCONP_QEI0EN;
		break;
	}
	default: {
		break;
	}
	}
}

static void disableQEIPeripheralClock(BT_HANDLE hQEI) {
	const BT_RESOURCE *pResource = BT_GetIntegratedResource(hQEI->pDevice, BT_RESOURCE_ENUM, 0);

	switch(pResource->ulStart) {
	case 0: {
		LPC17xx_RCC->PCONP &= ~LPC17xx_RCC_PCONP_QEI0EN;
		break;
	}
	default: {
		break;
	}
	}
}

static BT_BOOL isQEIPeripheralClockEnabled(BT_HANDLE hQEI) {
	const BT_RESOURCE *pResource = BT_GetIntegratedResource(hQEI->pDevice, BT_RESOURCE_ENUM, 0);

	switch(pResource->ulStart) {
	case 0: {
		if(LPC17xx_RCC->PCONP & LPC17xx_RCC_PCONP_QEI0EN) {
			return BT_TRUE;
		}
		break;
	}
	default: {
		break;
	}
	}

	return BT_FALSE;
}
