==> jameswalmsley/bitthunder/arch/arm/mach/lm3sxx/qei.c <==
#include <bitthunder.h>
#include "qei.h"
#include "rcc.h"

static void ResetQEI(BT_HANDLE hQEI)
{
	volatile LM3Sxx_QEI_REGS *pRegs = hQEI->pRegs;

	pRegs->QEICTL = 0x00000000;
	pRegs->QEIINTEN = 0x00000000;
}

static BT_s32 qei_get_velocity(BT_HANDLE hQEI, BT_ERROR *pError) {
	volatile LM3Sxx_QEI_REGS *pRegs = hQEI->pRegs;

	if (pError)
		*pError= BT_ERR_NONE;

	BT_u32 ulInputClk = BT_LM3Sxx_GetSystemFrequency();

	BT_s32 slVelocity = pRegs->QEISPEED * (ulInputClk / pRegs->QEILOAD);

	if (!(pRegs->QEICTL & LM3Sxx_QEI_QEICTL_SWAP))	{
		if (pRegs->QEISTAT & LM3Sxx_QEI_QEISTAT_DIR)
			slVelocity = -slVelocity;
	}
	else {
		if (!(pRegs->QEISTAT & LM3Sxx_QEI_QEISTAT_DIR))
			slVelocity = -slVelocity;
	}

	return slVelocity;
}

static BT_ERROR qei_setconfig(BT_HANDLE hQEI, BT_QEI_CONFIG *pConfig) {
	volatile LM3Sxx_QEI_REGS *pRegs = hQEI->pRegs;

	pRegs->QEICTL = 0x00;

	if (pConfig->eDirection 	== BT_QEI_DIRECTION_NEG)
		pRegs->QEICTL |= LM3Sxx_QEI_QEICTL_SWAP;
	if (pConfig->eSignalMode 	== BT_QEI_SIGNAL_DIR_CLK)
		pRegs->QEICTL |= LM3Sxx_QEI_QEICTL_SIGMODE;
	if (pConfig->eCaptureMode 	== BT_QEI_CAPTURE_4_EDGES)
		pRegs->QEICTL |= LM3Sxx_QEI_QEICTL_CAPMODE;

	BT_u32 ulInputClk = BT_LM3Sxx_GetSystemFrequency();

	pRegs->QEILOAD = ulInputClk / pConfig->ulVelocityUpdateRate;

	pRegs->QEICTL |= LM3Sxx_QEI_QEICTL_FILTER(5);
	pRegs->QEICTL |= LM3Sxx_QEI_QEICTL_FILTER_ENABLE;
	pRegs->QEICTL |= LM3Sxx_QEI_QEICTL_VELEN;

	hQEI->bUseIndexToResetPosition = pConfig->bUseIndexToResetPosition;

	if (pConfig->bUseIndexToResetPosition)
	{
		pRegs->QEICTL = LM3Sxx_QEI_QEICTL_RESMODE;
	}

	return BT_ERR_NONE;
}

static BT_ERROR qei_enable_interrupt(BT_HANDLE hQEI, BT_u32 ulType) {
	volatile LM3Sxx_QEI_REGS *pRegs = hQEI->pRegs;

	pRegs->QEIINTEN |= ulType;

	return BT_ERR_NONE;
}

static BT_ERROR qei_disable_interrupt(BT_HANDLE hQEI, BT_u32 ulType) {
	volatile LM3Sxx_QEI_REGS *pRegs = hQEI->pRegs;

	pRegs->QEIINTEN &= ~ulType;

	return BT_ERR_NONE;
}

static BT_ERROR qei_clear_interrupt(BT_HANDLE hQEI, BT_u32 ulType) {
	volatile LM3Sxx_QEI_REGS *pRegs = hQEI->pRegs;

	pRegs->QEIISC = ulType;

	return BT_ERR_NONE;
}

static void enableQEIPeripheralClock(BT_HANDLE hQEI) {
	const BT_RESOURCE *pResource = BT_GetIntegratedResource(hQEI->pDevice, BT_RESOURCE_ENUM, 0);

	switch(pResource->ulStart) {
	case 0: {
		LM3Sxx_RCC->RCGC[1] |= LM3Sxx_RCC_RCGC_QEI0EN;
		break;
	}
	case 1: {
		LM3Sxx_RCC->RCGC[1] |= LM3Sxx_RCC_RCGC_QEI1EN;
		break;
	}
	default: {
		break;
	}
	}
}

static void disableQEIPeripheralClock(BT_HANDLE hQEI) {
	const BT_RESOURCE *pResource = BT_GetIntegratedResource(hQEI->pDevice, BT_RESOURCE_ENUM, 0);

	switch(pResource->ulStart) {
	case 0: {
		LM3Sxx_RCC->RCGC[1] &= ~LM3Sxx_RCC_RCGC_QEI0EN;
		break;
	}
	case 1: {
		LM3Sxx_RCC->RCGC[1] &= ~LM3Sxx_RCC_RCGC_QEI1EN;
		break;
	}
	default: {
		break;
	}
	}
}

static BT_BOOL isQEIPeripheralClockEnabled(BT_HANDLE hQEI) {
	const BT_RESOURCE *pResource = BT_GetIntegratedResource(hQEI->pDevice, BT_RESOURCE_ENUM, 0);

	switch(pResource->ulStart) {
	case 0: {
		if(LM3Sxx_RCC->RCGC[1] & LM3Sxx_RCC_RCGC_QEI0EN) {
			return BT_TRUE;
		}
		break;
	}
	case 1: {
		if(LM3Sxx_RCC->RCGC[1] & LM3Sxx_RCC_RCGC_QEI1EN) {
			return BT_TRUE;
		}
		break;
	}
	default: {
		break;
	}
	}

	return BT_FALSE;
}
